--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=3000
 CORS_ORIGIN=*
-MONGODB_URI=
-DB_NAME = 
+MONGODB_URI=mongodb+srv://narayanvs015:OF2eAmMgIoAISFuY@cluster0.4itzcsd.mongodb.net
+DB_NAME = "ANALYTICS"
